SERVER-21976 fixing mongos' routing of dataSize command to mongods: it was using the wrong database