jstests/core/datasize2.js
@@ -1,27 +1,33 @@
+//
+// Test dataSize command, when called on the same or different database
+// than the collection being queried.
+//
 
-t = db.datasize2;
-t.drop();
+(function() {
+"use strict"
 
-N = 1000;
-for ( i=0; i<N; i++ ){
-    t.insert( { _id : i , s : "asdasdasdasdasdasdasd" } );
+var coll = db.foo;
+var adminDB = db.getSiblingDB('admin');
+coll.drop();
+
+var N = 1000;
+for (var i = 0; i < N; i++) {
+    coll.insert({_id: i, s: "asdasdasdasdasdasdasd"});
 }
 
-c = { dataSize : "test.datasize2" ,  
-      "keyPattern" : {
-          "_id" : 1
-      },
-      "min" : {
-          "_id" : 0
-      },
-      "max" : {
-          "_id" : N
-      }
-    };
+var dataSizeCommand = { "dataSize": "test.foo",
+                    "keyPattern": { "_id" : 1 },
+                    "min": { "_id" : 0 },
+                    "max": { "_id" : N } };
 
+assert.eq(N, db.runCommand(dataSizeCommand).numObjects,
+          "dataSize command on 'test.foo' failed when called on the 'test' DB.");
+assert.eq(N, adminDB.runCommand(dataSizeCommand).numObjects,
+          "dataSize command on 'test.foo' failed when called on the 'admin' DB.");
 
-assert.eq( N , db.runCommand( c ).numObjects , "A" );
-
-c.maxObjects = 100;
-assert.eq( 101 , db.runCommand( c ).numObjects , "B" );
-
+dataSizeCommand.maxObjects = 100;
+assert.eq(101, db.runCommand(dataSizeCommand).numObjects,
+          "dataSize command with max number of objects set failed on 'test' DB");
+assert.eq(101, db.runCommand(dataSizeCommand).numObjects,
+          "dataSize command with max number of objects set failed on 'admin' DB");
+})();
